--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.3.92" !default;
+$mdi-version:          "3.4.93" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -69,9 +69,12 @@ $mdi-icons: (
     "account-switch": F019,
     "account-tie": FCBF,
     "accusoft": F849,
+    "adchoices": FD1E,
     "adjust": F01A,
     "adobe": F935,
     "air-conditioner": F01B,
+    "air-filter": FD1F,
+    "air-purifier": FD20,
     "airbag": FBC5,
     "airballoon": F01C,
     "airplane": F01D,
@@ -249,6 +252,7 @@ $mdi-icons: (
     "android-auto": FA8D,
     "android-debug-bridge": F033,
     "android-head": F78F,
+    "android-messages": FD21,
     "android-studio": F034,
     "angle-acute": F936,
     "angle-obtuse": F937,
@@ -272,6 +276,7 @@ $mdi-icons: (
     "apple-safari": F039,
     "application": F614,
     "apps": F03B,
+    "apps-box": FD22,
     "arch": F8C6,
     "archive": F03C,
     "arrange-bring-forward": F03D,
@@ -379,6 +384,7 @@ $mdi-icons: (
     "asterisk": F6C3,
     "at": F065,
     "atlassian": F803,
+    "atm": FD23,
     "atom": F767,
     "attachment": F066,
     "audio-video": F93C,
@@ -389,6 +395,23 @@ $mdi-icons: (
     "autorenew": F06A,
     "av-timer": F06B,
     "axe": F8C7,
+    "axis": FD24,
+    "axis-arrow": FD25,
+    "axis-arrow-lock": FD26,
+    "axis-lock": FD27,
+    "axis-x-arrow": FD28,
+    "axis-x-arrow-lock": FD29,
+    "axis-x-rotate-clockwise": FD2A,
+    "axis-x-rotate-counterclockwise": FD2B,
+    "axis-x-y-arrow-lock": FD2C,
+    "axis-y-arrow": FD2D,
+    "axis-y-arrow-lock": FD2E,
+    "axis-y-rotate-clockwise": FD2F,
+    "axis-y-rotate-counterclockwise": FD30,
+    "axis-z-arrow": FD31,
+    "axis-z-arrow-lock": FD32,
+    "axis-z-rotate-clockwise": FD33,
+    "axis-z-rotate-counterclockwise": FD34,
     "azure": F804,
     "babel": FA24,
     "baby": F06C,
@@ -487,6 +510,9 @@ $mdi-icons: (
     "beer": F098,
     "behance": F099,
     "bell": F09A,
+    "bell-alert": FD35,
+    "bell-circle": FD36,
+    "bell-circle-outline": FD37,
     "bell-off": F09B,
     "bell-off-outline": FA90,
     "bell-outline": F09C,
@@ -659,6 +685,7 @@ $mdi-icons: (
     "calendar-export": FB09,
     "calendar-heart": F9D1,
     "calendar-import": FB0A,
+    "calendar-minus": FD38,
     "calendar-multiple": F0F1,
     "calendar-multiple-check": F0F2,
     "calendar-multiselect": FA31,
@@ -701,6 +728,7 @@ $mdi-icons: (
     "camera-metering-partial": F7A3,
     "camera-metering-spot": F7A4,
     "camera-off": F5DF,
+    "camera-outline": FD39,
     "camera-party-mode": F105,
     "camera-rear": F106,
     "camera-rear-variant": F107,
@@ -714,9 +742,14 @@ $mdi-icons: (
     "car": F10B,
     "car-battery": F10C,
     "car-brake-abs": FC23,
-    "car-brake-parking": FC24,
+    "car-brake-alert": FC24,
+    "car-brake-hold": FD3A,
+    "car-brake-parking": FD3B,
     "car-connected": F10D,
     "car-convertible": F7A6,
+    "car-cruise-control": FD3C,
+    "car-defrost-front": FD3D,
+    "car-defrost-rear": FD3E,
     "car-door": FB47,
     "car-electric": FB48,
     "car-esp": FC25,
@@ -728,10 +761,12 @@ $mdi-icons: (
     "car-light-high": FC28,
     "car-limousine": F8CC,
     "car-multiple": FB4A,
+    "car-parking-lights": FD3F,
     "car-pickup": F7A9,
     "car-side": F7AA,
     "car-sports": F7AB,
     "car-tire-alert": FC29,
+    "car-traction-control": FD40,
     "car-wash": F10E,
     "caravan": F7AC,
     "card": FB4B,
@@ -753,11 +788,16 @@ $mdi-icons: (
     "cards-spade": F8D0,
     "cards-variant": F6C6,
     "carrot": F10F,
+    "carry-on-bag-check": FD41,
     "cart": F110,
+    "cart-arrow-down": FD42,
     "cart-arrow-right": FC2A,
+    "cart-arrow-up": FD43,
+    "cart-minus": FD44,
     "cart-off": F66B,
     "cart-outline": F111,
     "cart-plus": F112,
+    "cart-remove": FD45,
     "case-sensitive-alt": F113,
     "cash": F114,
     "cash-100": F115,
@@ -1035,6 +1075,7 @@ $mdi-icons: (
     "console-network": F8A8,
     "console-network-outline": FC3C,
     "contact-mail": F18E,
+    "contactless-payment": FD46,
     "contacts": F6CA,
     "contain": FA3D,
     "contain-end": FA3E,
@@ -1063,6 +1104,7 @@ $mdi-icons: (
     "cow": F19A,
     "crane": F861,
     "creation": F1C9,
+    "creative-commons": FD47,
     "credit-card": F19B,
     "credit-card-multiple": F19C,
     "credit-card-off": F5E4,
@@ -1070,6 +1112,8 @@ $mdi-icons: (
     "credit-card-refund": FAA7,
     "credit-card-scan": F19D,
     "credit-card-settings": F8D6,
+    "credit-card-wireless": FD48,
+    "cricket": FD49,
     "crop": F19E,
     "crop-free": F19F,
     "crop-landscape": F1A0,
@@ -1164,6 +1208,7 @@ $mdi-icons: (
     "desktop-tower": F1C5,
     "desktop-tower-monitor": FAAA,
     "details": F1C6,
+    "dev-to": FD4A,
     "developer-board": F696,
     "deviantart": F1C7,
     "dialpad": F61C,
@@ -1212,6 +1257,7 @@ $mdi-icons: (
     "dog-side": FA43,
     "dolby": F6B2,
     "domain": F1D7,
+    "domain-off": FD4B,
     "donkey": F7C1,
     "door": F819,
     "door-closed": F81A,
@@ -1349,6 +1395,7 @@ $mdi-icons: (
     "eyedropper": F20A,
     "eyedropper-variant": F20B,
     "face": F643,
+    "face-agent": FD4C,
     "face-outline": FB72,
     "face-profile": F644,
     "face-recognition": FC57,
@@ -1360,6 +1407,7 @@ $mdi-icons: (
     "fan": F210,
     "fan-off": F81C,
     "fast-forward": F211,
+    "fast-forward-10": FD4D,
     "fast-forward-30": FCE2,
     "fast-forward-outline": F6D1,
     "fax": F212,
@@ -1449,6 +1497,7 @@ $mdi-icons: (
     "flag-triangle": F23F,
     "flag-variant": F240,
     "flag-variant-outline": F23E,
+    "flare": FD4E,
     "flash": F241,
     "flash-auto": F242,
     "flash-circle": F81F,
@@ -1586,6 +1635,8 @@ $mdi-icons: (
     "format-subscript": F282,
     "format-superscript": F283,
     "format-text": F284,
+    "format-text-rotation-down": FD4F,
+    "format-text-rotation-none": FD50,
     "format-text-wrapping-clip": FCEA,
     "format-text-wrapping-overflow": FCEB,
     "format-text-wrapping-wrap": FCEC,
@@ -1604,6 +1655,7 @@ $mdi-icons: (
     "forum": F28C,
     "forum-outline": F821,
     "forward": F28D,
+    "forwardburger": FD51,
     "fountain": F96A,
     "fountain-pen": FCEE,
     "fountain-pen-tip": FCEF,
@@ -1649,6 +1701,7 @@ $mdi-icons: (
     "gesture-double-tap": F73B,
     "gesture-pinch": FABC,
     "gesture-spread": FABD,
+    "gesture-swipe": FD52,
     "gesture-swipe-down": F73C,
     "gesture-swipe-horizontal": FABE,
     "gesture-swipe-left": F73D,
@@ -1656,10 +1709,12 @@ $mdi-icons: (
     "gesture-swipe-up": F73F,
     "gesture-swipe-vertical": FABF,
     "gesture-tap": F740,
+    "gesture-tap-hold": FD53,
     "gesture-two-double-tap": F741,
     "gesture-two-tap": F742,
     "ghost": F2A0,
     "ghost-off": F9F4,
+    "gif": FD54,
     "gift": F2A1,
     "git": F2A2,
     "github-box": F2A3,
@@ -1677,9 +1732,12 @@ $mdi-icons: (
     "globe-model": F8E8,
     "gmail": F2AB,
     "gnome": F2AC,
+    "go-kart": FD55,
+    "go-kart-track": FD56,
     "gog": FB7D,
     "golf": F822,
     "gondola": F685,
+    "goodreads": FD57,
     "google": F2AD,
     "google-adwords": FC63,
     "google-allo": F801,
@@ -1691,6 +1749,7 @@ $mdi-icons: (
     "google-circles-communities": F2B1,
     "google-circles-extended": F2B2,
     "google-circles-group": F2B3,
+    "google-classroom": F2C0,
     "google-controller": F2B4,
     "google-controller-off": F2B5,
     "google-drive": F2B6,
@@ -1712,9 +1771,9 @@ $mdi-icons: (
     "google-spreadsheet": F9F6,
     "google-street-view": FC64,
     "google-translate": F2BF,
-    "google-wallet": F2C0,
     "gpu": F8AD,
     "gradient": F69F,
+    "grain": FD58,
     "graphql": F876,
     "grave-stone": FB7E,
     "grease-pencil": F648,
@@ -1747,6 +1806,8 @@ $mdi-icons: (
     "harddisk": F2CA,
     "hat-fedora": FB80,
     "hazard-lights": FC65,
+    "hdr": FD59,
+    "hdr-off": FD5A,
     "headphones": F2CB,
     "headphones-bluetooth": F96F,
     "headphones-box": F2CC,
@@ -1793,6 +1854,7 @@ $mdi-icons: (
     "high-definition": F7CE,
     "high-definition-box": F877,
     "highway": F5F7,
+    "hiking": FD5B,
     "hinduism": F972,
     "history": F2DA,
     "hockey-puck": F878,
@@ -1807,6 +1869,13 @@ $mdi-icons: (
     "home-city": FCF1,
     "home-city-outline": FCF2,
     "home-currency-usd": F8AE,
+    "home-floor-1": FD5C,
+    "home-floor-2": FD5D,
+    "home-floor-3": FD5E,
+    "home-floor-a": FD5F,
+    "home-floor-b": FD60,
+    "home-floor-g": FD61,
+    "home-floor-l": FD62,
     "home-heart": F826,
     "home-lock": F8EA,
     "home-lock-open": F8EB,
@@ -1902,6 +1971,7 @@ $mdi-icons: (
     "jsfiddle": F304,
     "json": F626,
     "judaism": F979,
+    "kabaddi": FD63,
     "karate": F82B,
     "keg": F305,
     "kettle": F5FA,
@@ -2046,6 +2116,13 @@ $mdi-icons: (
     "magnify-plus-outline": F6EC,
     "mail-ru": F34C,
     "mailbox": F6ED,
+    "mailbox-open": FD64,
+    "mailbox-open-outline": FD65,
+    "mailbox-open-up": FD66,
+    "mailbox-open-up-outline": FD67,
+    "mailbox-outline": FD68,
+    "mailbox-up": FD69,
+    "mailbox-up-outline": FD6A,
     "map": F34D,
     "map-clock": FCFA,
     "map-clock-outline": FCFB,
@@ -2144,6 +2221,7 @@ $mdi-icons: (
     "minus-network": F378,
     "minus-network-outline": FC76,
     "mixcloud": F62A,
+    "mixed-martial-arts": FD6B,
     "mixed-reality": F87E,
     "mixer": F7DC,
     "molecule": FB88,
@@ -2152,8 +2230,10 @@ $mdi-icons: (
     "monitor-cellphone-star": F989,
     "monitor-dashboard": FA06,
     "monitor-multiple": F37A,
+    "monitor-off": FD6C,
     "more": F37B,
     "mother-nurse": FCFD,
+    "motion-sensor": FD6D,
     "motorbike": F37C,
     "mouse": F37D,
     "mouse-bluetooth": F98A,
@@ -2480,6 +2560,7 @@ $mdi-icons: (
     "podium-bronze": FD02,
     "podium-gold": FD03,
     "podium-silver": FD04,
+    "point-of-sale": FD6E,
     "pokeball": F41D,
     "pokemon-go": FA08,
     "poker-chip": F82F,
@@ -2545,6 +2626,8 @@ $mdi-icons: (
     "quicktime": F436,
     "quora": FD05,
     "rabbit": F906,
+    "racing-helmet": FD6F,
+    "racquetball": FD70,
     "radar": F437,
     "radiator": F438,
     "radiator-disabled": FAD6,
@@ -2559,7 +2642,7 @@ $mdi-icons: (
     "radiobox-marked": F43E,
     "radius": FC9C,
     "radius-outline": FC9D,
-    "raspberrypi": F43F,
+    "raspberry-pi": F43F,
     "ray-end": F440,
     "ray-end-arrow": F441,
     "ray-start": F442,
@@ -2602,10 +2685,12 @@ $mdi-icons: (
     "resize-bottom-right": F45D,
     "responsive": F45E,
     "restart": F708,
+    "restart-off": FD71,
     "restore": F99A,
     "restore-clock": F6A7,
     "rewind": F45F,
     "rewind-10": FD06,
+    "rewind-30": FD72,
     "rewind-outline": F709,
     "rhombus": F70A,
     "rhombus-medium": FA0F,
@@ -2625,9 +2710,11 @@ $mdi-icons: (
     "rollerblade": FD08,
     "rollupjs": FB9C,
     "room-service": F88C,
+    "room-service-outline": FD73,
     "rotate-3d": F464,
     "rotate-left": F465,
     "rotate-left-variant": F466,
+    "rotate-orbit": FD74,
     "rotate-right": F467,
     "rotate-right-variant": F468,
     "rounded-corner": F607,
@@ -2638,6 +2725,7 @@ $mdi-icons: (
     "rss": F46B,
     "rss-box": F46C,
     "ruby": FD09,
+    "rugby": FD75,
     "ruler": F46D,
     "ruler-square": FC9E,
     "run": F70D,
@@ -2755,6 +2843,7 @@ $mdi-icons: (
     "shield-plus-outline": FADA,
     "shield-remove": FADB,
     "shield-remove-outline": FADC,
+    "shield-search": FD76,
     "ship-wheel": F832,
     "shoe-formal": FB22,
     "shoe-heel": FB23,
@@ -2829,6 +2918,8 @@ $mdi-icons: (
     "soccer": F4B8,
     "soccer-field": F833,
     "sofa": F4B9,
+    "solar-panel": FD77,
+    "solar-panel-large": FD78,
     "solar-power": FA71,
     "solid": F68C,
     "sort": F4BA,
@@ -2925,6 +3016,7 @@ $mdi-icons: (
     "subtitles": FA15,
     "subtitles-outline": FA16,
     "subway": F6AB,
+    "subway-alert-variant": FD79,
     "subway-variant": F4DF,
     "summit": F785,
     "sunglasses": F4E0,
@@ -2994,6 +3086,8 @@ $mdi-icons: (
     "target-account": FBAC,
     "target-variant": FA76,
     "taxi": F4FF,
+    "tea": FD7A,
+    "tea-outline": FD7B,
     "teach": F88F,
     "teamviewer": F500,
     "telegram": F501,
@@ -3007,7 +3101,8 @@ $mdi-icons: (
     "temperature-celsius": F504,
     "temperature-fahrenheit": F505,
     "temperature-kelvin": F506,
-    "tennis": F507,
+    "tennis": FD7C,
+    "tennis-ball": F507,
     "tent": F508,
     "terrain": F509,
     "test-tube": F668,
@@ -3093,7 +3188,10 @@ $mdi-icons: (
     "tram": F52D,
     "transcribe": F52E,
     "transcribe-close": F52F,
-    "transfer": F530,
+    "transfer-down": FD7D,
+    "transfer-left": FD7E,
+    "transfer-right": F530,
+    "transfer-up": FD7F,
     "transit-connection": FD18,
     "transit-connection-variant": FD19,
     "transit-transfer": F6AD,
@@ -3114,6 +3212,7 @@ $mdi-icons: (
     "triforce": FBB5,
     "trophy": F538,
     "trophy-award": F539,
+    "trophy-broken": FD80,
     "trophy-outline": F53A,
     "trophy-variant": F53B,
     "trophy-variant-outline": F53C,
@@ -3338,6 +3437,7 @@ $mdi-icons: (
     "wii": F5AB,
     "wiiu": F72C,
     "wikipedia": F5AC,
+    "wind-turbine": FD81,
     "window-close": F5AD,
     "window-closed": F5AE,
     "window-maximize": F5AF,
@@ -3347,6 +3447,7 @@ $mdi-icons: (
     "windows": F5B3,
     "windows-classic": FA20,
     "wiper": FAE8,
+    "wiper-wash": FD82,
     "wordpress": F5B4,
     "worker": F5B5,
     "wrap": F5B6,
