--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.4.93" !default;
+$mdi-version:          "3.5.94" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -18,10 +18,15 @@ $mdi-icons: (
     "account-arrow-left-outline": FB2E,
     "account-arrow-right": FB2F,
     "account-arrow-right-outline": FB30,
+    "account-badge": FD83,
+    "account-badge-alert": FD84,
+    "account-badge-alert-outline": FD85,
+    "account-badge-outline": FD86,
     "account-box": F006,
     "account-box-multiple": F933,
     "account-box-outline": F007,
     "account-card-details": F5D2,
+    "account-card-details-outline": FD87,
     "account-check": F008,
     "account-check-outline": FBBE,
     "account-child": FA88,
@@ -74,6 +79,7 @@ $mdi-icons: (
     "adobe": F935,
     "air-conditioner": F01B,
     "air-filter": FD1F,
+    "air-horn": FD88,
     "air-purifier": FD20,
     "airbag": FBC5,
     "airballoon": F01C,
@@ -275,6 +281,8 @@ $mdi-icons: (
     "apple-keyboard-shift": F636,
     "apple-safari": F039,
     "application": F614,
+    "application-export": FD89,
+    "application-import": FD8A,
     "apps": F03B,
     "apps-box": FD22,
     "arch": F8C6,
@@ -426,8 +434,12 @@ $mdi-icons: (
     "ballot-outline": F9C9,
     "ballot-recount": FC15,
     "ballot-recount-outline": FC16,
+    "bandage": FD8B,
     "bandcamp": F674,
     "bank": F070,
+    "bank-minus": FD8C,
+    "bank-plus": FD8D,
+    "bank-remove": FD8E,
     "bank-transfer": FA26,
     "bank-transfer-in": FA27,
     "bank-transfer-out": FA28,
@@ -553,6 +565,7 @@ $mdi-icons: (
     "blur-off": F0B7,
     "blur-radial": F0B8,
     "bolnisi-cross": FCC9,
+    "bolt": FD8F,
     "bomb": F690,
     "bomb-off": F6C4,
     "bone": F0B9,
@@ -653,6 +666,7 @@ $mdi-icons: (
     "bug-check": FA2D,
     "bug-check-outline": FA2E,
     "bug-outline": FA2F,
+    "bugle": FD90,
     "bulldozer": FB07,
     "bullet": FCCF,
     "bulletin-board": F0E5,
@@ -669,6 +683,7 @@ $mdi-icons: (
     "bus-school": F79E,
     "bus-side": F79F,
     "cached": F0E8,
+    "cactus": FD91,
     "cake": F0E9,
     "cake-layered": F0EA,
     "cake-variant": F0EB,
@@ -734,6 +749,8 @@ $mdi-icons: (
     "camera-rear-variant": F107,
     "camera-switch": F108,
     "camera-timer": F109,
+    "camera-wireless": FD92,
+    "camera-wireless-outline": FD93,
     "cancel": F739,
     "candle": F5E2,
     "candycane": F10A,
@@ -801,6 +818,7 @@ $mdi-icons: (
     "case-sensitive-alt": F113,
     "cash": F114,
     "cash-100": F115,
+    "cash-marker": FD94,
     "cash-multiple": F116,
     "cash-refund": FA9B,
     "cash-register": FCD0,
@@ -912,6 +930,10 @@ $mdi-icons: (
     "chevron-right-box-outline": F9DA,
     "chevron-right-circle": FB0F,
     "chevron-right-circle-outline": FB10,
+    "chevron-triple-down": FD95,
+    "chevron-triple-left": FD96,
+    "chevron-triple-right": FD97,
+    "chevron-triple-up": FD98,
     "chevron-up": F143,
     "chevron-up-box": F9DB,
     "chevron-up-box-outline": F9DC,
@@ -990,6 +1012,7 @@ $mdi-icons: (
     "close-octagon-outline": F15D,
     "close-outline": F6C8,
     "closed-caption": F15E,
+    "closed-caption-outline": FD99,
     "cloud": F15F,
     "cloud-alert": F9DF,
     "cloud-braces": F7B4,
@@ -1106,6 +1129,7 @@ $mdi-icons: (
     "creation": F1C9,
     "creative-commons": FD47,
     "credit-card": F19B,
+    "credit-card-marker": FD9A,
     "credit-card-multiple": F19C,
     "credit-card-off": F5E4,
     "credit-card-plus": F675,
@@ -1242,6 +1266,13 @@ $mdi-icons: (
     "dishwasher": FAAB,
     "disqus": F1D2,
     "disqus-outline": F1D3,
+    "diving-flippers": FD9B,
+    "diving-helmet": FD9C,
+    "diving-scuba": FD9D,
+    "diving-scuba-flag": FD9E,
+    "diving-scuba-tank": FD9F,
+    "diving-scuba-tank-multiple": FDA0,
+    "diving-snorkel": FDA1,
     "division": F1D4,
     "division-box": F1D5,
     "dlna": FA40,
@@ -1421,6 +1452,8 @@ $mdi-icons: (
     "file-alert": FA4A,
     "file-alert-outline": FA4B,
     "file-cabinet": FAB5,
+    "file-cancel": FDA2,
+    "file-cancel-outline": FDA3,
     "file-chart": F215,
     "file-check": F216,
     "file-cloud": F217,
@@ -1431,12 +1464,16 @@ $mdi-icons: (
     "file-document-box-multiple": FAB6,
     "file-document-box-multiple-outline": FAB7,
     "file-document-box-outline": F9EC,
+    "file-document-edit": FDA4,
+    "file-document-edit-outline": FDA5,
     "file-document-outline": F9ED,
     "file-download": F964,
     "file-download-outline": F965,
     "file-excel": F21B,
     "file-excel-box": F21C,
     "file-export": F21D,
+    "file-eye": FDA6,
+    "file-eye-outline": FDA7,
     "file-find": F21E,
     "file-find-outline": FB73,
     "file-hidden": F613,
@@ -1526,10 +1563,13 @@ $mdi-icons: (
     "folder": F24B,
     "folder-account": F24C,
     "folder-account-outline": FB78,
+    "folder-alert": FDA8,
+    "folder-alert-outline": FDA9,
     "folder-clock": FAB9,
     "folder-clock-outline": FABA,
     "folder-download": F24D,
     "folder-edit": F8DD,
+    "folder-edit-outline": FDAA,
     "folder-google-drive": F24E,
     "folder-image": F24F,
     "folder-key": F8AB,
@@ -1544,6 +1584,7 @@ $mdi-icons: (
     "folder-network": F86F,
     "folder-network-outline": FC5D,
     "folder-open": F76F,
+    "folder-open-outline": FDAB,
     "folder-outline": F256,
     "folder-plus": F257,
     "folder-plus-outline": FB79,
@@ -1616,6 +1657,7 @@ $mdi-icons: (
     "format-line-style": F5C8,
     "format-line-weight": F5C9,
     "format-list-bulleted": F279,
+    "format-list-bulleted-square": FDAC,
     "format-list-bulleted-type": F27A,
     "format-list-checkbox": F969,
     "format-list-checks": F755,
@@ -1674,6 +1716,7 @@ $mdi-icons: (
     "fuse-blade": FC62,
     "gamepad": F296,
     "gamepad-variant": F297,
+    "gantry-crane": FDAD,
     "garage": F6D8,
     "garage-alert": F871,
     "garage-open": F6D9,
@@ -1869,6 +1912,7 @@ $mdi-icons: (
     "home-city": FCF1,
     "home-city-outline": FCF2,
     "home-currency-usd": F8AE,
+    "home-floor-0": FDAE,
     "home-floor-1": FD5C,
     "home-floor-2": FD5D,
     "home-floor-3": FD5E,
@@ -1876,6 +1920,8 @@ $mdi-icons: (
     "home-floor-b": FD60,
     "home-floor-g": FD61,
     "home-floor-l": FD62,
+    "home-floor-negative-1": FDAF,
+    "home-group": FDB0,
     "home-heart": F826,
     "home-lock": F8EA,
     "home-lock-open": F8EB,
@@ -1965,6 +2011,7 @@ $mdi-icons: (
     "ipod": FC6D,
     "islam": F978,
     "itunes": F676,
+    "jabber": FDB1,
     "jeepney": F302,
     "jira": F303,
     "jquery": F87C,
@@ -1978,6 +2025,7 @@ $mdi-icons: (
     "key": F306,
     "key-change": F307,
     "key-minus": F308,
+    "key-outline": FDB2,
     "key-plus": F309,
     "key-remove": F30A,
     "key-variant": F30B,
@@ -2043,6 +2091,8 @@ $mdi-icons: (
     "lead-pencil": F64F,
     "leaf": F32A,
     "leaf-maple": FC6F,
+    "leak": FDB3,
+    "leak-off": FDB4,
     "led-off": F32B,
     "led-on": F32C,
     "led-outline": F32D,
@@ -2147,6 +2197,7 @@ $mdi-icons: (
     "margin": F353,
     "markdown": F354,
     "marker": F652,
+    "marker-cancel": FDB5,
     "marker-check": F355,
     "mastodon": FAD0,
     "mastodon-variant": FAD1,
@@ -2210,6 +2261,7 @@ $mdi-icons: (
     "microwave": FC75,
     "midi": F8F0,
     "midi-port": F8F1,
+    "mine": FDB6,
     "minecraft": F373,
     "mini-sd": FA04,
     "minidisc": FA05,
@@ -2229,8 +2281,10 @@ $mdi-icons: (
     "monitor-cellphone": F988,
     "monitor-cellphone-star": F989,
     "monitor-dashboard": FA06,
+    "monitor-lock": FDB7,
     "monitor-multiple": F37A,
     "monitor-off": FD6C,
+    "monitor-star": FDB8,
     "more": F37B,
     "mother-nurse": FCFD,
     "motion-sensor": FD6D,
@@ -2243,6 +2297,7 @@ $mdi-icons: (
     "move-resize": F655,
     "move-resize-variant": F656,
     "movie": F381,
+    "movie-outline": FDB9,
     "movie-roll": F7DD,
     "muffin": F98B,
     "multiplication": F382,
@@ -2260,10 +2315,12 @@ $mdi-icons: (
     "music-note-eighth": F388,
     "music-note-half": F389,
     "music-note-off": F38A,
+    "music-note-plus": FDBA,
     "music-note-quarter": F38B,
     "music-note-sixteenth": F38C,
     "music-note-whole": F38D,
     "music-off": F75A,
+    "nail": FDBB,
     "nas": F8F2,
     "nativescript": F87F,
     "nature": F38E,
@@ -2380,6 +2437,7 @@ $mdi-icons: (
     "nut": F6F7,
     "nutrition": F3C2,
     "oar": F67B,
+    "ocarina": FDBC,
     "octagon": F3C3,
     "octagon-outline": F3C4,
     "octagram": F6F8,
@@ -2450,6 +2508,7 @@ $mdi-icons: (
     "parachute-outline": FC91,
     "parking": F3E3,
     "passport": F7E2,
+    "passport-biometric": FDBD,
     "patreon": F881,
     "pause": F3E4,
     "pause-circle": F3E5,
@@ -2461,14 +2520,27 @@ $mdi-icons: (
     "paypal": F882,
     "peace": F883,
     "pen": F3EA,
+    "pen-lock": FDBE,
+    "pen-minus": FDBF,
+    "pen-off": FDC0,
+    "pen-plus": FDC1,
+    "pen-remove": FDC2,
     "pencil": F3EB,
     "pencil-box": F3EC,
     "pencil-box-outline": F3ED,
     "pencil-circle": F6FE,
     "pencil-circle-outline": F775,
     "pencil-lock": F3EE,
+    "pencil-lock-outline": FDC3,
+    "pencil-minus": FDC4,
+    "pencil-minus-outline": FDC5,
     "pencil-off": F3EF,
+    "pencil-off-outline": FDC6,
     "pencil-outline": FC92,
+    "pencil-plus": FDC7,
+    "pencil-plus-outline": FDC8,
+    "pencil-remove": FDC9,
+    "pencil-remove-outline": FDCA,
     "pentagon": F6FF,
     "pentagon-outline": F700,
     "percent": F3F0,
@@ -2489,7 +2561,9 @@ $mdi-icons: (
     "phone-log": F3F9,
     "phone-minus": F658,
     "phone-missed": F3FA,
+    "phone-off": FDCB,
     "phone-outgoing": F3FB,
+    "phone-outline": FDCC,
     "phone-paused": F3FC,
     "phone-plus": F659,
     "phone-return": F82E,
@@ -2499,6 +2573,7 @@ $mdi-icons: (
     "phone-voip": F3FE,
     "pi": F3FF,
     "pi-box": F400,
+    "pi-hole": FDCD,
     "piano": F67C,
     "pickaxe": F8B6,
     "pier": F886,
@@ -2540,6 +2615,7 @@ $mdi-icons: (
     "playlist-play": F411,
     "playlist-plus": F412,
     "playlist-remove": F413,
+    "playlist-star": FDCE,
     "playstation": F414,
     "plex": F6B9,
     "plus": F415,
@@ -2751,6 +2827,11 @@ $mdi-icons: (
     "scissors-cutting": FA6A,
     "screen-rotation": F475,
     "screen-rotation-lock": F476,
+    "screw-flat-top": FDCF,
+    "screw-lag": FDD0,
+    "screw-machine-flat-top": FDD1,
+    "screw-machine-round-top": FDD2,
+    "screw-round-top": FDD3,
     "screwdriver": F477,
     "script": FB9D,
     "script-outline": F478,
@@ -2784,6 +2865,8 @@ $mdi-icons: (
     "selection-ellipse": FD0E,
     "selection-off": F776,
     "send": F48A,
+    "send-circle": FDD4,
+    "send-circle-outline": FDD5,
     "send-lock": F7EC,
     "serial-port": F65C,
     "server": F48B,
@@ -2847,6 +2930,7 @@ $mdi-icons: (
     "ship-wheel": F832,
     "shoe-formal": FB22,
     "shoe-heel": FB23,
+    "shoe-print": FDD6,
     "shopify": FADD,
     "shopping": F49A,
     "shopping-music": F49B,
@@ -2876,6 +2960,10 @@ $mdi-icons: (
     "signal-hspa-plus": F715,
     "signal-off": F782,
     "signal-variant": F60A,
+    "signature": FDD7,
+    "signature-freehand": FDD8,
+    "signature-image": FDD9,
+    "signature-text": FDDA,
     "silo": FB24,
     "silverware": F4A3,
     "silverware-fork": F4A4,
@@ -2908,6 +2996,8 @@ $mdi-icons: (
     "slackware": F90A,
     "sleep": F4B2,
     "sleep-off": F4B3,
+    "slope-downhill": FDDB,
+    "slope-uphill": FDDC,
     "smog": FA70,
     "smoke-detector": F392,
     "smoking": F4B4,
@@ -3120,7 +3210,12 @@ $mdi-icons: (
     "theater": F50D,
     "theme-light-dark": F50E,
     "thermometer": F50F,
+    "thermometer-alert": FDDD,
+    "thermometer-chevron-down": FDDE,
+    "thermometer-chevron-up": FDDF,
     "thermometer-lines": F510,
+    "thermometer-minus": FDE0,
+    "thermometer-plus": FDE1,
     "thermostat": F393,
     "thermostat-box": F890,
     "thought-bubble": F7F5,
@@ -3198,6 +3293,7 @@ $mdi-icons: (
     "transition": F914,
     "transition-masked": F915,
     "translate": F5CA,
+    "translate-off": FDE2,
     "transmission-tower": FD1A,
     "trash-can": FA78,
     "trash-can-outline": FA79,
@@ -3263,6 +3359,7 @@ $mdi-icons: (
     "upload-multiple": F83C,
     "upload-network": F6F5,
     "upload-network-outline": FCB4,
+    "upload-outline": FDE3,
     "usb": F553,
     "van-passenger": F7F9,
     "van-utility": F7FA,
@@ -3349,6 +3446,7 @@ $mdi-icons: (
     "volume-mute": F75E,
     "volume-off": F581,
     "volume-plus": F75C,
+    "volume-variant-off": FDE4,
     "vote": FA1E,
     "vote-outline": FA1F,
     "vpn": F582,
@@ -3363,6 +3461,7 @@ $mdi-icons: (
     "wallet-membership": F586,
     "wallet-outline": FBB9,
     "wallet-travel": F587,
+    "wallpaper": FDE5,
     "wan": F588,
     "washing-machine": F729,
     "watch": F589,
@@ -3375,6 +3474,7 @@ $mdi-icons: (
     "watch-vibrate-off": FCB6,
     "water": F58C,
     "water-off": F58D,
+    "water-outline": FDE6,
     "water-percent": F58E,
     "water-pump": F58F,
     "watermark": F612,
@@ -3417,6 +3517,7 @@ $mdi-icons: (
     "widgets": F72B,
     "wifi": F5A9,
     "wifi-off": F5AA,
+    "wifi-star": FDE7,
     "wifi-strength-1": F91E,
     "wifi-strength-1-alert": F91F,
     "wifi-strength-1-lock": F920,
